ucurry/tests/test_suite/negative_test/negative_assign.uc
-- simple type error
int a = 1;
a = false;
